# HumbuckerEngine

./: .name  CMakeLists.txt  CppSandbox.sln  LICENSE  README.md
CppSandbox/: AlgorithmsImplementations.cpp  CppSandbox.vcxproj
CppSandbox/CppSandbox/: AlgorithmsImplementations.h  CppSandbox.cpp  CppSandbox.vcxproj.filters
CppSandbox/CppSandbox/x64/Debug/: vc143.idb
CppSandbox/CppSandbox/x64/Debug/CppSandbox.tlog/: CL.read.1.tlog  CL.write.1.tlog  link.read.1.tlog  link.secondary.1.tlog
CppSandbox/DiningPhilosophers/: DiningPhilosophersManager.h  Fork.h  Philosopher.cpp  Philosopher.h
CppSandbox/x64/Debug/: CppSandbox.exe.recipe  vc143.idb
CppSandbox/x64/Debug/CppSandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CppSandbox.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
HumbuckerEngine/: AlgorithmsImplementations.cpp  Application.cpp  HumbuckerEngine.vcxproj
HumbuckerEngine/DiningPhilosophers/: DiningPhilosophersManager.cpp  Fork.cpp  Fork.h  Philosopher.cpp
HumbuckerEngine/EngineModules/: IInputManager.h  IRenderer.h
HumbuckerEngine/Input/: InputConstants.h  InputManager_OpenGL.cpp  InputManager_OpenGL.h
HumbuckerEngine/Rendering/: Mesh.h  RenderingData.h  RenderingPreProcessor.cpp  RenderingPreProcessor.h
HumbuckerEngine/Rendering/OpenGLRenderer/: GL_Window.cpp  GL_Window.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer_OpenGL.cpp  Renderer_OpenGL.h  RenderingPreProcessor.cpp  RenderingPreProcessor.h  RenderingPreProcessor_OpenGL.cpp  RenderingPreProcessor_OpenGL.h  Window.cpp  Window.h  Window_OpenGL.cpp  Window_OpenGL.h
HumbuckerEngine/Rendering/OpenGLRenderer/Dev/: Development_OpenGL.cpp  Development_OpenGL.h
HumbuckerEngine/SceneLayout/: Scene.h  SceneObject.h  Transform.h
HumbuckerEngine/Shaders/: DefaultShader.frag  DefaultShader.vert
HumbuckerEngine/Utils/: HumbuckerUtils.cpp  HumbuckerUtils.h  Settings.h  ShapesLibrary.cpp  ShapesLibrary.h
HumbuckerEngine/x64/Debug/: HumbuckerEngine.exe.recipe  vc143.idb
HumbuckerEngine/x64/Debug/CppSandbox.tlog/: CL.read.1.tlog  CL.write.1.tlog  link.read.1.tlog  link.secondary.1.tlog
HumbuckerEngine/x64/Debug/HumbuckerEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Debug/: CppSandbox.exe.recipe
x64/Debug/CppSandbox.tlog/: CL.command.1.tlog  Cl.items.tlog  CppSandbox.lastbuildstate  link.command.1.tlog  link.write.1.tlog
